--- a/coffeelint-server/package.json
+++ b/coffeelint-server/package.json
@@ -6,17 +6,27 @@
 	"license": "GPL",
 	"engines": {
 		"node": "*",
-		"vscode": "^1.15.0"
+		"vscode": "^1.52.0"
 	},
 	"devDependencies": {
-		"@types/mocha": "^2.2.48",
-		"@types/node": "^9.4.7",
-		"typescript": "^2.7.2",
-		"vscode": "^1.1.13"
+		"@types/mocha": "^8.2.2",
+		"@types/node": "^15.0.2",
+		"@types/vscode": "^1.52.0",
+		"@typescript-eslint/eslint-plugin": "^4.22.1",
+		"@typescript-eslint/parser": "^4.22.1",
+		"eslint": "^7.25.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-jsdoc": "^33.1.0",
+		"eslint-plugin-prefer-arrow": "^1.2.3",
+		"mocha": "^8.4.0",
+		"tslint": "^6.1.3",
+		"typescript": "4.2.x",
+		"vscode-test": "^1.5.2"
 	},
 	"dependencies": {
-		"vscode-languageserver": "^4.0.0",
-		"coffeelint": "^2.1.0"
+		"coffeelint": "^2.1.0",
+		"vscode-languageserver": "^7.0.0",
+		"vscode-languageserver-textdocument": "^1.0.1"
 	},
 	"scripts": {
 		"compile": "installServerIntoExtension ../coffeelint ./package.json ./tsconfig.json && tsc -p .",
