--- a/coffeelint/package.json
+++ b/coffeelint/package.json
@@ -4,7 +4,7 @@
 	"description": "CoffeeScript linter for VS Code.",
 	"author": "lkytal",
 	"publisher": "lkytal",
-	"version": "1.4.0",
+	"version": "1.4.1",
 	"license": "GPL",
 	"repository": {
 		"type": "git",
@@ -15,7 +15,7 @@
 	},
 	"icon": "icon.png",
 	"engines": {
-		"vscode": "^1.18.0"
+		"vscode": "^1.52.0"
 	},
 	"categories": [
 		"Linters"
@@ -184,18 +184,28 @@
 	"scripts": {
 		"vscode:prepublish": "cd ../coffeelint-server && npm run compile && cd ../coffeelint && tsc -p ./",
 		"compile": "tsc -p ./ && cd ../coffeelint-server && npm run compile",
+		"lint": "eslint . --ext .ts,.tsx",
+		"pretest": "npm run compile",
 		"watch": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
-		"test": "node ./node_modules/vscode/bin/test"
+		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"typescript": "^2.7.2",
-		"vscode": "^1.1.13",
-		"mocha": "^5.0.4",
-		"@types/node": "^9.4.7",
-		"@types/mocha": "^2.2.48"
+		"@types/mocha": "^8.2.2",
+		"@types/node": "^15.0.2",
+		"@types/vscode": "^1.52.0",
+		"@typescript-eslint/eslint-plugin": "^4.22.1",
+		"@typescript-eslint/parser": "^4.22.1",
+		"eslint": "^7.25.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-jsdoc": "^33.1.0",
+		"eslint-plugin-prefer-arrow": "^1.2.3",
+		"mocha": "^8.4.0",
+		"tslint": "^6.1.3",
+		"typescript": "4.2.x",
+		"vscode-test": "^1.5.2"
 	},
 	"dependencies": {
-		"vscode-languageclient": "^4.0.0"
+		"vscode-languageclient": "^7.0.0",
+		"vscode-languageserver-textdocument": "^1.0.1"
 	}
 }
